--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -42,6 +42,7 @@ jobs:
           tags: 0.0.1
           registry: docker.io
           dockerfile: "docker/8.4/Dockerfile"  # Correct relative path
+          context: .  # Explicit build context
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
