trying to fix build errors

--- a/docker/8.4/Dockerfile
+++ b/docker/8.4/Dockerfile
@@ -61,10 +61,13 @@ RUN userdel -r ubuntu
 RUN groupadd --force -g $WWWGROUP sail
 RUN useradd -ms /bin/bash --no-user-group -g $WWWGROUP -u 1337 sail
 
-COPY start-container /usr/local/bin/start-container
-COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
-COPY php.ini /etc/php/8.4/cli/conf.d/99-sail.ini
-RUN chmod +x /usr/local/bin/start-container
+# Remove these lines if you want to disable container startup:
+# COPY start-container /usr/local/bin/start-container
+# COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+# RUN chmod +x /usr/local/bin/start-container
+
+# Keep only the php.ini copy with correct path:
+COPY docker/8.4/php.ini /etc/php/8.4/cli/conf.d/99-sail.ini
 
 EXPOSE 80/tcp
 
