--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -10,17 +10,17 @@ permissions:
   contents: read
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-    - name: Validate composer.json and composer.lock
+    - name: Validate composer.json
       run: composer validate --strict
 
     - name: Cache Composer packages
-      id: composer-cache
       uses: actions/cache@v3
       with:
         path: vendor
@@ -28,22 +28,31 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-php-
 
-    - name: Install dependencies
+    - name: Install PHP dependencies
       run: composer install --prefer-dist --no-progress
 
-    - name: Install javascript assets
+    - name: Install Node.js dependencies
       run: npm install
 
-    # Fixed Docker build step
-    - uses: mr-smithers-excellent/docker-build-push@v6
-      name: Build & push Docker image
+    - name: Login to Docker Hub
+      uses: docker/login-action@v2
       with:
-          image: mubaraklouis/hospitalsystem
-          tags: 0.0.1
-          registry: docker.io
-          dockerfile: "docker/Dockerfile"  # Correct relative path
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
+
+    - name: Build and push with Docker Compose
+      uses: docker/compose-action@v3
+      with:
+        compose-file: docker-compose.yml
+        project-name: hospital
+        action: build
+
+    - name: Push Docker images
+      uses: docker/compose-action@v3
+      with:
+        compose-file: docker-compose.yml
+        project-name: hospital
+        action: push
 
 
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
