--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -3,36 +3,17 @@ name: Hospital CI/CD
 on:
   push:
     branches: ["main"]
-  pull_request:
-    branches: ["main"]
-
-permissions:
-  contents: read
 
 jobs:
-  build-and-deploy:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Validate composer.json
-      run: composer validate --strict
-
-    - name: Cache Composer packages
-      uses: actions/cache@v3
-      with:
-        path: vendor
-        key: ${{ runner.os }}-php-${{ hashFiles('**/composer.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-php-
-
-    - name: Install PHP dependencies
-      run: composer install --prefer-dist --no-progress
-
-    - name: Install Node.js dependencies
-      run: npm install
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
 
     - name: Login to Docker Hub
       uses: docker/login-action@v2
@@ -40,23 +21,16 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and push with Docker Compose
-      uses: docker/compose-action@v3
+    - name: Build and push using Docker Compose
+      uses: docker/build-push-action@v4
       with:
-        compose-file: docker-compose.yml
-        project-name: hospital
-        action: build
+        context: .
+        file: docker-compose.yml
+        push: true
+        tags: mubaraklouis/hospitalsystem:0.0.1
+        build-args: |
+          WWWGROUP=1000
+          WWWUSER=1000
 
-    - name: Push Docker images
-      uses: docker/compose-action@v3
-      with:
-        compose-file: docker-compose.yml
-        project-name: hospital
-        action: push
-
-
-    # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
-    # Docs: https://getcomposer.org/doc/articles/scripts.md
-
-    # - name: Run test suite
-    #   run: composer run-script test
+    - name: Run Docker Compose
+      run: docker-compose up -d
