get another image

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -25,9 +25,9 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: .
-        file: docker/8.4/Dockerfile # Point to actual Dockerfile
+        file: docker/Dockerfile # Point to actual Dockerfile
         push: true
-        tags: mubaraklouis/hospitalsystem:0.0.1
+        tags: mubaraklouis/hospitalsystem:0.0.2
         build-args: |
           WWWGROUP=1000
           WWWUSER=1000
