--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,14 +1,38 @@
 FROM php:8.3.10
-RUN apt-get update -y && apt-get install -y openssl zip unzip git
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-RUN apt-get update && apt-get install -y libpq-dev
+
+# Install system dependencies
+RUN apt-get update -y && apt-get install -y \
+    openssl \
+    zip \
+    unzip \
+    git \
+    curl \
+    libpq-dev \
+    && rm -rf /var/lib/apt/lists/*
+
+# Install Node.js and npm
+RUN curl -fsSL https://deb.nodesource.com/setup_18.x | bash - \
+    && apt-get install -y nodejs \
+    && npm install -g npm@latest
+
+# Install PHP extensions
 RUN docker-php-ext-install pdo pdo_pgsql
 
-RUN php -m | grep mbstring
+# Install Composer
+RUN curl -sS https://getcomposer.org/installer | php -- \
+    --install-dir=/usr/local/bin --filename=composer
+
 WORKDIR /app
-COPY . /app
-RUN composer install
+
+# Copy application files
+COPY . .
+
+# Install PHP dependencies
+RUN composer install --no-interaction --optimize-autoloader
+
+# Install JavaScript dependencies
 RUN npm install
 
-CMD php artisan serve --host=0.0.0.0 --port=8000
+# Expose port and run application
 EXPOSE 8000
+CMD ["php", "artisan", "serve", "--host=0.0.0.0", "--port=8000"]
