--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,5 @@
-FROM php:8.3.10
+# Base PHP Image
+FROM php:8.3
 
 # Install system dependencies
 RUN apt-get update -y && \
@@ -13,10 +14,10 @@ RUN apt-get update -y && \
     gnupg \
     && rm -rf /var/lib/apt/lists/*
 
-# Install Node.js 18.x
+# Install Node.js 18.x properly
 RUN mkdir -p /etc/apt/keyrings && \
     curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg && \
-    echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_18.x nodistro main" | tee /etc/apt/sources.list.d/nodesource.list && \
+    echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_18.x $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/nodesource.list && \
     apt-get update && \
     apt-get install -y nodejs && \
     npm install -g npm@latest
@@ -28,12 +29,16 @@ RUN docker-php-ext-install pdo pdo_pgsql
 RUN curl -sS https://getcomposer.org/installer | php -- \
     --install-dir=/usr/local/bin --filename=composer
 
+# Set working directory
 WORKDIR /app
 COPY . .
 
-# Install dependencies
+# Install Laravel & Vue dependencies
 RUN composer install --no-interaction --optimize-autoloader
-RUN npm install
+RUN npm install && npm run build  # Important: Build the Vue frontend
 
+# Expose port
 EXPOSE 8000
+
+# Start Laravel backend
 CMD ["php", "artisan", "serve", "--host=0.0.0.0", "--port=8000"]
