get another image

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-# Base PHP Image
+# Use PHP 8.3 base image
 FROM php:8.3
 
 # Install system dependencies
@@ -14,10 +14,10 @@ RUN apt-get update -y && \
     gnupg \
     && rm -rf /var/lib/apt/lists/*
 
-# Install Node.js 18.x properly
+# Install Node.js 18.x (Fix: Hardcoded Debian "bookworm" instead of lsb_release)
 RUN mkdir -p /etc/apt/keyrings && \
     curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg && \
-    echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_18.x $(lsb_release -cs) main" | tee /etc/apt/sources.list.d/nodesource.list && \
+    echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_18.x bookworm main" | tee /etc/apt/sources.list.d/nodesource.list && \
     apt-get update && \
     apt-get install -y nodejs && \
     npm install -g npm@latest
@@ -35,7 +35,7 @@ COPY . .
 
 # Install Laravel & Vue dependencies
 RUN composer install --no-interaction --optimize-autoloader
-RUN npm install && npm run build  # Important: Build the Vue frontend
+RUN npm install && npm run build  # Build Vue frontend
 
 # Expose port
 EXPOSE 8000
