get another image

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,15 @@
-# Use PHP 8.3 base image
+# ==============================
+# 1️⃣ Build Vue Frontend using Node.js
+# ==============================
+FROM node:18 AS frontend
+
+WORKDIR /app
+COPY . .
+RUN npm install && npm run build
+
+# ==============================
+# 2️⃣ Set Up PHP Backend
+# ==============================
 FROM php:8.3
 
 # Install system dependencies
@@ -14,14 +25,6 @@ RUN apt-get update -y && \
     gnupg \
     && rm -rf /var/lib/apt/lists/*
 
-# Install Node.js 18.x (Fix: Hardcoded Debian "bookworm" instead of lsb_release)
-RUN mkdir -p /etc/apt/keyrings && \
-    curl -fsSL https://deb.nodesource.com/gpgkey/nodesource-repo.gpg.key | gpg --dearmor -o /etc/apt/keyrings/nodesource.gpg && \
-    echo "deb [signed-by=/etc/apt/keyrings/nodesource.gpg] https://deb.nodesource.com/node_18.x bookworm main" | tee /etc/apt/sources.list.d/nodesource.list && \
-    apt-get update && \
-    apt-get install -y nodejs && \
-    npm install -g npm@latest
-
 # Install PHP extensions
 RUN docker-php-ext-install pdo pdo_pgsql
 
@@ -31,11 +34,10 @@ RUN curl -sS https://getcomposer.org/installer | php -- \
 
 # Set working directory
 WORKDIR /app
-COPY . .
+COPY --from=frontend /app .  
 
-# Install Laravel & Vue dependencies
+# Install Laravel dependencies
 RUN composer install --no-interaction --optimize-autoloader
-RUN npm install && npm run build  # Build Vue frontend
 
 # Expose port
 EXPOSE 8000
