get another image

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,16 +1,7 @@
 # ==============================
-# 1️⃣ Build Vue Frontend using Node.js
+# 1️⃣ Backend Stage - Install PHP & Laravel
 # ==============================
-FROM node:18 AS frontend
-
-WORKDIR /app
-COPY . .
-RUN npm install && npm run build
-
-# ==============================
-# 2️⃣ Set Up PHP Backend
-# ==============================
-FROM php:8.3
+FROM php:8.3 AS backend
 
 # Install system dependencies
 RUN apt-get update -y && \
@@ -32,12 +23,31 @@ RUN docker-php-ext-install pdo pdo_pgsql
 RUN curl -sS https://getcomposer.org/installer | php -- \
     --install-dir=/usr/local/bin --filename=composer
 
-# Set working directory
 WORKDIR /app
-COPY --from=frontend /app .  
-
-# Install Laravel dependencies
+COPY composer.json composer.lock ./
 RUN composer install --no-interaction --optimize-autoloader
+
+# Copy Laravel app files (exclude frontend for now)
+COPY . .
+RUN php artisan ziggy:generate  # Generate Ziggy routes for Vue
+
+# ==============================
+# 2️⃣ Frontend Stage - Build Vue App
+# ==============================
+FROM node:18 AS frontend
+
+WORKDIR /app
+COPY --from=backend /app .
+RUN npm install && npm run build 
+
+# ==============================
+# 3️⃣ Final Stage - Serve Laravel
+# ==============================
+FROM php:8.3
+
+WORKDIR /app
+COPY --from=backend /app .
+COPY --from=frontend /app/public/js public/js
 
 # Expose port
 EXPOSE 8000
