--- a/kube/mysql-deployment.yaml
+++ b/kube/mysql-deployment.yaml
@@ -1,4 +1,14 @@
 apiVersion: v1
+kind: Secret
+metadata:
+  name: mysql-secret
+type: Opaque
+data:
+  MYSQL_ROOT_PASSWORD: cGFzc3dvcmQ=  # password (base64 encoded)
+  MYSQL_PASSWORD: cGFzc3dvcmQ=       # password (base64 encoded)
+  MYSQL_USER: aG9zcGl0YWw=           # hospital (base64 encoded)
+---
+apiVersion: v1
 kind: Service
 metadata:
   name: mysql-service
@@ -9,7 +19,18 @@ spec:
     - protocol: TCP
       port: 3306
       targetPort: 3306
-  type: ClusterIP
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mysql-pvc
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 2Gi
+  storageClassName: standard
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -28,26 +49,31 @@ spec:
       - name: mysql
         image: mysql:8.0
         env:
-        - name: MYSQL_ROOT_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: mysql-secrets
-              key: root-password
         - name: MYSQL_DATABASE
           value: "hospital_db"
         - name: MYSQL_USER
-          value: "hospital_user"
+          valueFrom:
+            secretKeyRef:
+              name: mysql-secret
+              key: MYSQL_USER
         - name: MYSQL_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: mysql-secrets
-              key: user-password
+              name: mysql-secret
+              key: MYSQL_PASSWORD
+        - name: MYSQL_ROOT_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: mysql-secret
+              key: MYSQL_ROOT_PASSWORD
         ports:
         - containerPort: 3306
         volumeMounts:
-        - name: mysql-pvc
+        - name: mysql-persistent-storage
           mountPath: /var/lib/mysql
       volumes:
-      - name: mysql-pvc
+      - name: mysql-persistent-storage
         persistentVolumeClaim:
-          claimName: mysql-pv-claim
+          claimName: mysql-pvc
+      securityContext:
+        runAsUser: 1000
