--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -22,34 +22,22 @@ RUN curl -sS https://getcomposer.org/installer | php -- \
     --install-dir=/usr/local/bin --filename=composer
 
 WORKDIR /app
-
-# Copy files in stages for better caching
-COPY composer.json composer.lock ./
-RUN composer install --no-interaction --no-dev --optimize-autoloader
-
-COPY package.json package-lock.json ./
-RUN npm install && npm run build
-
-# Copy remaining files (except what's in .dockerignore)
 COPY . .
 
-# Create the entrypoint script
-RUN echo '#!/bin/sh\n\
-if [ ! -f .env ]; then\n\
-    cp .env.example .env\n\
-fi\n\
-php artisan key:generate\n\
-php artisan storage:link\n\
-php artisan optimize:clear\n\
-php artisan optimize\n\
-exec "$@"' > /usr/local/bin/entrypoint.sh && \
-    chmod +x /usr/local/bin/entrypoint.sh
+# Install PHP dependencies
+RUN composer install --no-interaction --optimize-autoloader
 
-# Set up storage permissions
-RUN chown -R www-data:www-data storage bootstrap/cache && \
-    chmod -R 775 storage bootstrap/cache
+# Install Node.js dependencies and build assets
+RUN npm install && npm run build
+
+# Add entrypoint script and set permissions
+COPY entrypoint.sh /usr/local/bin/
+RUN chmod +x /usr/local/bin/entrypoint.sh
+
+# Run setup commands during build
+RUN /usr/local/bin/entrypoint.sh
 
 EXPOSE 8000
 
-ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
+# Keep the original CMD
 CMD ["php", "artisan", "serve", "--host=0.0.0.0", "--port=8000"]
