--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:D4DkBbRFOMPQv3aE6oCo9LFewDntaUt3DoJLaLx7N2U=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -19,12 +19,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=hospitaldb.cjeqoo2ks4c8.eu-north-1.rds.amazonaws.com
+DB_PORT=3306
+DB_DATABASE=hospital_db
+DB_USERNAME=admin
+DB_PASSWORD=kuallouisdau
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
